# mitsuba3

./: .appveyor.yml  .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  .readthedocs.yml  CMakeLists.txt  CMakePresets.json  FIELD_REFACTOR_REVIEW.md  Jenkinsfile  README.md  _bench_log.py  _bench_util.py  bench_fancy.py  bench_fancy_detail.py  chi2_data.py  configure.py  continuous_deriv.py  cornell_box_metal.exr  dummy_sensor.py  fd.exr  fd_1.exr  fd_2.exr  log  mitsuba.conf  path_fwd.exr  prb_basic_fwd.exr  prb_fwd.exr  primal.exr  pyproject.toml  pytest.ini  render_cornell_box.py  render_cornell_curves.py  render_cornell_ellipsoids.py  render_cornell_fancy.py  render_cornell_sdfgrid.py  render_cornell_sphere_cylinder.py  reproducer.py  reproducer_1.py  setpath-debug.sh  (+62 more)
ext/: CMakeLists.txt
ext/rgb2spec/: CMakeLists.txt  rgb2spec.c  rgb2spec.h  rgb2spec_opt.cpp
src/: CMakeLists.txt  conftest.py
src/bsdfs/: CMakeLists.txt  blendbsdf.cpp  bumpmap.cpp  circular.cpp  conductor.cpp  dielectric.cpp  dielectric_disp.cpp  diffuse.cpp  disney.cpp  gtr1.h  hair.cpp  mask.cpp  measured.cpp  measured_polarized.cpp  neuralbsdf.cpp  normalmap.cpp  normalmap_helpers.h  null.cpp  plastic.cpp  polarizer.cpp  pplastic.cpp  principled.cpp  principledhelpers.h  principledthin.cpp  retarder.cpp  roughconductor.cpp  roughdielectric.cpp  roughplastic.cpp  thindielectric.cpp  twosided.cpp
src/cmake/: FindITT.cmake  docstrings.cmake  instrumentation.cmake  libpython.cmake  mkdoc.cmake  tests.cmake
src/core/: CMakeLists.txt  animated_transform.cpp  appender.cpp  bitmap.cpp  class.cpp  dstream.cpp  filesystem.cpp  formatter.cpp  fresolver.cpp  fstream.cpp  jit.cpp  logger.cpp  mmap.cpp  mstream.cpp  object.cpp  parser.cpp  plugin.cpp  profiler.cpp  progress.cpp  properties.cpp  qmc.cpp  rfilter.cpp  spectrum.cpp  stream.cpp  string.cpp  struct.cpp  tensor.cpp  thread.cpp  transform.cpp  util.cpp  xml.cpp  zstream.cpp
src/emitters/: CMakeLists.txt  area.cpp  astroobject.cpp  avg_sunsky.cpp  constant.cpp  directional.cpp  directionalarea.cpp  envmap.cpp  photon_emitter.cpp  photon_emitter_old.cpp  point.cpp  projector.cpp  sky.cpp  smootharea.cpp  spot.cpp  sun.cpp  sunsky.cpp  timed_sunsky.cpp  volume.cpp  volumelight.cpp
src/eradiate_plugins/: CMakeLists.txt
src/fields/: CMakeLists.txt  bitmap.cpp  checkerboard.cpp  constvolume.cpp  grid.cpp  gridvolume.cpp  hashgrid.cpp  mesh_attribute.cpp  neural.cpp  permuto.cpp  sinusoidal.cpp  volume.cpp
src/films/: CMakeLists.txt  hdrfilm.cpp  specfilm.cpp  tape.cpp
src/integrators/: CMakeLists.txt  aov.cpp  aov_ad.cpp  custom_ptracer.cpp  depth.cpp  direct.cpp  dummy.cpp  moment.cpp  oldpath.cpp  path.cpp  path_em.cpp  path_mats.cpp  ptracer.cpp  stokes.cpp  tmp.cpp  volpath-null-simple.cpp  volpath-null.cpp  volpath-simple.cpp  volpath.cpp  volpathmis.cpp
src/libcore/: CMakeLists.txt  annotated_stream.cpp  appender.cpp  argparser.cpp  astream.cpp  bbox.cpp  bitmap.cpp  bsphere.cpp  class.cpp  ddistr.cpp  ddistribution.cpp  dither-matrix256.cpp  dstream.cpp  dummy_stream.cpp  file_stream.cpp  filesystem.cpp  formatter.cpp  fresolver.cpp  fstream.cpp  jit.cpp  logger.cpp  math.cpp  memory_stream.cpp  mmap.cpp  mstream.cpp  object.cpp  path.cpp  plugin.cpp  profiler.cpp  progress.cpp  properties.cpp  qmc.cpp  quad.cpp  random.cpp  resolver.h  rfilter.cpp  spectrum.cpp  spline.cpp  stream.cpp  string.cpp  (+13 more)
src/libgui/: CMakeLists.txt  warp_visualizer.cpp  warp_visualizer.py
src/libpython/: CMakeLists.txt  appender.cpp  argparser.cpp  atomic.cpp  bbox.cpp  bitmap.cpp  cast.cpp  ddistribution.cpp  docstr.h  filesystem.cpp  formatter.cpp  frame.cpp  fresolver.cpp  hypothesis.cpp  logger.cpp  main.cpp  math.cpp  mitsuba_core_ext.cpp  mitsuba_render_ext.cpp  mitsuba_ui_ext.cpp  object.cpp  pcg32.cpp  properties.cpp  python.h  qmc.cpp  random.cpp  ray.cpp  rfilter.cpp  scene.cpp  shape.cpp  spectrum.cpp  spline.cpp  stream.cpp  struct.cpp  structconv.cpp  test_argparser.py  test_astream.py  test_atomic.py  test_filesystem.py  test_logger.py  (+10 more)
src/librender/: CMakeLists.txt  autodiff.cpp  blender_types.h  bsdf.cpp  common.cpp  emitter.cpp  endpoint.cpp  film.cpp  fresnel.cpp  imageblock.cpp  integrator.cpp  interaction.cpp  intersection.cpp  kdtree.cpp  medium.cpp  mesh.cpp  microfacet.cpp  mueller.cpp  optix_api.cpp  optix_api.h  phase.cpp  reflection.cpp  rt.cpp  rtbench.cpp  sampler.cpp  scatteringintegrator.cpp  scene.cpp  scene_embree.cpp  scene_embree.inl  scene_native.cpp  scene_native.inl  scene_optix.cpp  scene_optix.inl  sensor.cpp  shape.cpp  shapegroup.cpp  spectrum.cpp  spiral.cpp  srgb.cpp  texture.cpp  (+3 more)
src/libui/: CMakeLists.txt  gltexture.cpp  texture.cpp  viewer.cpp  warp_visualizer.cpp  warp_visualizer.py
src/media/: CMakeLists.txt  heterogeneous.cpp  homogeneous.cpp  specmedium.cpp  spectra.cpp
src/mitsuba/: CMakeLists.txt  mitsuba.cpp
src/mtsgui/: CMakeLists.txt  mtsgui.cpp
src/phase/: CMakeLists.txt  blendphase.cpp  forward.cpp  hg.cpp  isotropic.cpp  rayleigh.cpp  sggx.cpp  tabphase.cpp
src/phasefunctions/: CMakeLists.txt  hg.cpp  isotropic.cpp
src/python/: CMakeLists.txt  __init__.py  alias.cpp  detail.py  main.cpp  main_v.cpp  stubs.pat
src/python-old/: __init__.py
src/python_tests/: __init__.py  test_ray_loader.py  test_ray_loader_texture.py  test_util.py
src/render/: CMakeLists.txt  accel_cpu_common.h  bbox_reduce.h  bsdf.cpp  denoiser.cpp  embree.h  emitter.cpp  endpoint.cpp  field.cpp  film.cpp  imageblock.cpp  integrator.cpp  kdtree.cpp  medium.cpp  mesh.cpp  metal_accel.mm  microfacet.cpp  optix_api.cpp  optixdenoiser.cpp  phase.cpp  sampler.cpp  scene.cpp  scene_embree.inl  scene_ir.cpp  scene_metal.inl  scene_native.inl  scene_optix.inl  sdf.cpp  sensor.cpp  shape.cpp  shapegroup.cpp  spiral.cpp  srgb.cpp  texture.cpp  volume.cpp  volumegrid.cpp
src/rfilters/: CMakeLists.txt  box.cpp  catmullrom.cpp  gaussian.cpp  lanczos.cpp  mitchell.cpp  tent.cpp
src/samplers/: CMakeLists.txt  independent.cpp  ldsampler.cpp  multijitter.cpp  orthogonal.cpp  stratified.cpp
src/sensors/: CMakeLists.txt  (+10 more)
(+1338 files in other folders)
